# cfepi

./: .clang-format  .gitignore  CMakeLists.txt  DESCRIPTION  Makefile  README.md  README_dependencies.md  conanfile.txt  multipleTrials  multiple_trials.c  profileSetup.sh  runTrial.sh  run_coverage.sh  setup.c  setup.c~  test.R  test_control.R  tmp.R  tmp2.R  vaccination.c  valgrind.sh  windows_counterfactual.c
.github/workflows/: build_cmake.yml  ci.yml  codeql-analysis.yml  template-janitor.yml
R/: counterfactual_params.R  hello.R  intervention_params.R  make_figures.R  multiple_world_time_trial.R  sellke_comparison.R  setup_all_interventions.R  setup_antiviral_intervention.R  setup_counterfactual.R  setup_figures.R  setup_handwashing_intervention.R  setup_interventions.R  setup_null_intervention.R  setup_vaccination_intervention.R  test.R  test_final_size.R  test_intervention.R  test_interventions.R  time_calculation.R
branches/R_compliant/: DESCRIPTION  Makefile  reformat.pl  runTrial.sh  test.R  tmp.R  tmp2.R
branches/R_compliant/R/: hello.R
branches/R_compliant/src/: counterfactual.c  counterfactual.h  multiple_trials.c  new.counterfactual.c  rinterface.c  rinterface.h
branches/R_compliant/vignettes/: Engineering.Rmd  group_meeting_presentation.Rmd
branches/manuscript/: NAMESPACE
branches/manuscript/R/: intervention_params.R  make_figures.R  multiple_world_time_trial.R  setup_antiviral_intervention.R  (+5 more)
branches/r_package/: DESCRIPTION  Makefile  NAMESPACE  multiple_trials.c
branches/smaller_types/: Makefile  multiple_trials.c  test.R  test_control.R  tmp3.R
cmake/: Conan.cmake  Doxygen.cmake
cmake/module/: FindR.cmake  FindRcpp.cmake
doc/: flowchart.org
exec/: writeSpecificScenarios.pl
figures/: Makefile  event-anatomy-simplified.eps  event-anatomy_both.eps  figure1.tex  figure12.eps  figure3.tex  handout.tex  intervention-effects-time-series-cases-averted-switched-cropped.eps  test.tex
hooks/: post-commit  post-commit.tmpl
man/: clean_all_files.Rd
old_output/: figures0.Flat.None.0.csv  figures0.Flat.None.3.csv  figures0.Flat.None.6.csv  figures0.None.Constant.2.csv  figures0.None.Constant.3.csv  figures0.None.Constant.5.csv  figures0.None.None.6.csv  figures0.None.None.8.csv  figures0.None.None.9.csv  figures0.None.Single.0.csv  figures0.None.Single.1.csv  figures0.None.Single.4.csv  figures0.None.Single.8.csv  figures0.None.Single.9.csv  figures1.None.None.2.csv  figures1.None.None.5.csv
output/: figures.0.Flat.None.1.csv  figures.0.Flat.None.9.csv  figures.0.None.Constant.1.csv  figures.0.None.Constant.3.csv  figures.0.None.Constant.6.csv  figures.0.None.Constant.7.csv  figures.0.None.None.0.csv  figures.0.None.None.4.csv  figures.0.None.None.5.csv  figures.0.None.None.6.csv  figures.0.None.None.7.csv  figures.0.None.Single.0.csv  figures.0.None.Single.1.csv  figures.0.None.Single.4.csv  figures.0.None.Single.5.csv  figures.0.None.Single.9.csv  figures.1.None.None.0.csv  figures.1.None.None.1.csv  figures.1.None.None.6.csv  figures.1.None.None.7.csv  figures.Flat.None.0.csv  figures.Flat.None.2.csv  figures.Flat.None.4.csv  figures.Flat.None.6.csv  figures.Flat.None.7.csv  figures.Flat.None.9.csv  figures.None.Constant.1.csv  figures.None.Constant.3.csv  figures.None.Constant.6.csv  figures.None.Constant.7.csv  figures.None.Constant.8.csv  figures.None.Constant.9.csv  figures.None.None.0.csv  figures.None.None.1.csv  figures.None.None.2.csv  figures.None.None.4.csv  figures.None.None.9.csv  figures.None.Single.2.csv  figures.None.Single.3.csv  figures.None.Single.4.csv  (+4653 more)
package/: DESCRIPTION  NAMESPACE  cran-comments.md
package/R/: read.R  setup.R  util.R
package/exec/: test.R
package/man/: calculate_residual.Rd  read_scenario.Rd  run_full_counterfactual.Rd  run_scenario.Rd
package/src/: constant_intervention.c  constant_intervention.h  counterfactual.c  counterfactual.h  flat_intervention.c  init_cfepi.c  multiple_trials.c  no_intervention.c  rinterface.c  rinterface.h  single_intervention.c  single_intervention.h  twofunctions.c
package/tests/: testthat.R
package/vignettes/: summary.Rmd
pdfs/: RSPA_Author_tex.tex  bibliography.bib
src/: CMakeLists.txt  counterfactual.c  counterfactual.h  covid.cpp.in  covid.json  flat_intervention.c  main.cpp  multiple_trials.c  network.c  network.h  no_intervention.c  notes.org  rinterface.c  rinterface.h  sir.cpp  sir.cpp.in  sir.json  sir_concepts.cpp  test2.c  tests.cpp  tests.cpp.in  twofunctions.c  types.h  uvira.cpp  uvira.cpp.in  uvira.json  windows_setup.c
src/include/cfepi/: bitset.hpp  config.hpp  generators.hpp  modeling.hpp  sample_view.hpp  sir.hpp  sir_generators.hpp  sir_specific.hpp
take_2/cfepi/: CMakeLists.txt  conanfile.txt  profile.sh
take_2/cfepi/include/: generators.h  sir.cpp  sir.h  sir_generators.h
take_2/cfepi/src/: main.cpp  sir.cpp  sir_concepts.cpp
take_2/doc/: flowchart.org
test/: CMakeLists.txt  constexpr_tests.cpp  constexpr_tests.cpp.in  seir.json  seir_test.cpp  sir.json  test_ranges.cpp  tests.cpp  tests.cpp.in  tmp.cpp
tests/testthat/: test-load.R
tex/: epidemic_both.tex  epidemic_controlled.tex  epidemic_uncontrolled.tex  event-anatomy-simplified.tex  event-anatomy.tex  figure1.tex  figure10-precrop.tex  figure11.tex  figure2.tex  figure3.tex  figure4.tex  figure5.tex  figure6-precrop.tex  figure6.tex  figure7.tex  figure8.tex  figure9.tex  main.tex  main2.tex  outline.org  outline.tex  peg_create.tex  peg_steps.tex
trunk/: noIntervention  profileSetup.sh  runAll.sh
trunk/exec/: writeSpecificScenarios.pl
trunk/src/: counterfactual.c  quarantine.c  social_distancing.c
vignettes/: group_meeting_presentation.Rmd  group_meeting_presentation.html
(+7221 files in other folders)
